# rujpankideck

./: .gitignore  README.md  pyproject.toml  ruff.toml  ty.toml
ankimaker/: main.py  pyproject.toml
dictmaker/: main.py  pyproject.toml
dictmaker/core/: processor.py
dictmaker/parsers/: article_parser.py  example_parser.py  gui_word_parser.py  word_parser.py
dictmaker/tests/: test_article_duplicate_check.py  test_article_processor.py
shared/: pyproject.toml
shared/shared/: csv.py  regex.py
shared/shared/csv/: utils.py
shared/shared/database/: db_session.py  models.py  utils.py
shared/shared/regex/: utils.py
tts/: main.py  pyproject.toml
