[project]
name = "rujpankideck"
version = "0.1.0"
description = "Root"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anki>=25.9.4",
    "beautifulsoup4>=4.14.3",
    "html2text>=2025.4.15",
    "jaconv>=0.5.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pywinauto>=0.6.9",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = ["ruff>=0.15.14"]

[tool.uv.workspace]
members = ["ankimaker", "dictmaker", "tts", "shared"]

[tool.uv]
cache-dir = "./.uv_cache"
