[project]
name = "rujpankideck"
version = "1.0.0"
description = "Root"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anki>=26.5",
    "audioop-lts>=0.2.2",
    "beautifulsoup4>=4.15.0",
    "html2text>=2025.4.15",
    "jaconv>=0.5.0",
    "pydantic>=2.13.4",
    "pydub>=0.25.1",
    "pykakasi>=2.3.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pywinauto>=0.6.9",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "shared",
]

[dependency-groups]
dev = ["ruff>=0.15.14"]

[tool.uv.workspace]
members = ["ankimaker", "dictmaker", "tts", "shared"]

[tool.uv.sources]
shared = { workspace = true }

[tool.uv]
cache-dir = "./.uv_cache"
